updated file structure for html files

--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
         <!-- Bootstrap Javacript -->
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js" integrity="sha384-6khuMg9gaYr5AxOqhkVIODVIvm9ynTT5J4V1cfthmT+emCG6yVmEZsRHdxlotUnm" crossorigin="anonymous"></script>
         <!-- Own imported CSS -->
-        <link rel="stylesheet" href="css/style-index.css">
+        <link rel="stylesheet" href="css/style-contact.css">
     </head>
     <body>
         <header class="jumbotron">
