more file structure of html, adding all content structure

--- a/index.html
+++ b/index.html
@@ -12,13 +12,30 @@
         <link rel="stylesheet" href="css/style-index.css">
     </head>
     <body>
-        <header class="jumbotron">
-
-        </header>
+        <nav class="navbar">
+            <h1>Zach Yingling</h1>
+            <div class="header-anchors justify-content-end">
+                <a href="#" id="about">About</a>
+                <a href="portfolio.html" id="portfolio">Portfolio</a>
+                <a href="contact.html" id="contact">Contact</a>
+            </div>
+        </nav>
         <div class="container">
+            <div class="row">
+                <div class="col-1-sm"></div>
+                <div class="col-10-sm col-12-xs"></div>
+                <div class="col-1-sm "></div>
+            </div>
         </div>
-        <footer class="jumbotron">
-
+        <footer class="row jumbotron">
+            <div class="col-4">
+            </div>
+            <div class="col-4">
+                <!-- Add text-align: center; -->
+                <p>Copyright&copy;<p>
+            </div>
+            <div class="col-4">
+            </div>
         </footer>
     </body>
 
