--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <!-- Bootstrap Javacript -->
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js" integrity="sha384-6khuMg9gaYr5AxOqhkVIODVIvm9ynTT5J4V1cfthmT+emCG6yVmEZsRHdxlotUnm" crossorigin="anonymous"></script>
         <!-- Own imported CSS -->
+        <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="css/style-index.css">
     </head>
     <body>
@@ -21,10 +22,25 @@
             </div>
         </nav>
         <div class="container">
-            <div class="row">
+            <div class="row my-row">
                 <div class="col-1-sm"></div>
-                <div class="col-10-sm col-12-xs"></div>
-                <div class="col-1-sm "></div>
+                <div class="col-10-sm col-12-xs">
+                    <h1 id="about-header">About Me</h1>
+                    <img src="images/portrait.jpg" alt="Picture of me" height="300" width="200">
+                    <p id="bio-paragraph">
+                        I'm an 18 year old currently enrolled in UPenn's fullstack web development course. Currently, I'm a manager at a local ice cream shop and have been working 
+                        there since I was 15.
+                    </p>
+                    <br>
+                    <h4 id="hobbies-header">Hobbies</h4>
+                    <p id="hobbies-paragraph">
+                        As of right now, I have two major hobbies that are weightlifting and video games. I got into weightlifting because how fragile I used to be.
+                        From my time lifting I have put on 35 pounds and got a lot stronger. Video games have been a big part of life since I was 6 getting my first gaming console, Playstation 2.
+                        From that point I have been playing different types of video games. My current favorite game is called Rocket League. On that game I have 1300 logged hours and currently top 0.5%
+                        on the ranked leaderboards.
+                    </p>
+                </div>
+                <div class="col-1-sm"></div>
             </div>
         </div>
         <footer class="row jumbotron">
