--- a/portfolio.html
+++ b/portfolio.html
@@ -9,6 +9,7 @@
         <!-- Bootstrap Javacript -->
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js" integrity="sha384-6khuMg9gaYr5AxOqhkVIODVIvm9ynTT5J4V1cfthmT+emCG6yVmEZsRHdxlotUnm" crossorigin="anonymous"></script>
         <!-- Own imported CSS -->
+        <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="css/style-portfolio.css">
     </head>
     <body>
@@ -21,9 +22,31 @@
             </div>
         </nav>
         <div class="container">
-            <div class="row">
+            <div class="row my-row">
                 <div class="col-1-sm"></div>
-                <div class="col-10-sm col-12-xs"></div>
+                <div class="col-10-sm col-12-xs">
+                    <h1 id="portfolio-header">Portfolio</h1>
+                    <div class="weightlifting">
+                        <img src="http://lorempixel.com/output/sports-q-c-400-300-1.jpg" alt="sample photo">
+                        <h2>Weightlifting</h2>
+                    </div>
+                    <div class="video-games">
+                        <img src="http://lorempixel.com/output/business-q-c-400-300-9.jpg" alt="sample photo">
+                        <h2>Video Games</h2>
+                    </div>
+                    <div class="computer">
+                        <img src="http://lorempixel.com/output/technics-q-c-400-300-4.jpg" alt="sample photo">
+                        <h2>Computers</h2>
+                    </div>
+                    <div class="family">
+                        <img src="http://lorempixel.com/output/people-q-c-400-300-8.jpg" alt="sample photo">
+                        <h2>Family</h2>
+                    </div>
+                    <div class="friends">
+                        <img src="http://lorempixel.com/output/people-q-c-400-300-4.jpg" alt="sample photo">
+                        <h2>Friends</h2>
+                    </div>
+                </div>
                 <div class="col-1-sm "></div>
             </div>
         </div>
