finalizing main content page

--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
         <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="css/style-index.css">
     </head>
+
     <body>
-        <nav class="navbar">
-            <h1>Zach Yingling</h1>
+        <nav class="navbar border-bottom border-1">
+            <h1 class="name-header">Zach Yingling</h1>
             <div class="header-anchors justify-content-end">
                 <a href="#" id="about">About</a>
                 <a href="portfolio.html" id="portfolio">Portfolio</a>
@@ -22,9 +23,9 @@
             </div>
         </nav>
         <div class="container">
-            <div class="row my-row">
+            <div class="row">
                 <div class="col-1-sm"></div>
-                <div class="col-10-sm col-12-xs">
+                <div class="col-10-sm col-12-xs main-content">
                     <h1 id="about-header">About Me</h1>
                     <img src="images/portrait.jpg" alt="Picture of me" height="300" width="200">
                     <p id="bio-paragraph">
@@ -47,12 +48,10 @@
             <div class="col-4">
             </div>
             <div class="col-4">
-                <!-- Add text-align: center; -->
-                <p>Copyright&copy;<p>
+                <p id="copyright-text">Copyright&copy;<p>
             </div>
             <div class="col-4">
             </div>
         </footer>
     </body>
-
 </html>
