main touches before working on contact and portfolio page

--- a/contact.html
+++ b/contact.html
@@ -13,18 +13,19 @@
         <link rel="stylesheet" href="css/style-contact.css">
     </head>
     <body>
-        <nav class="navbar">
-            <h1>Zach Yingling</h1>
+        <nav class="navbar border-bottom border-1">
+            <h1 class="name-header">Zach Yingling</h1>
             <div class="header-anchors justify-content-end">
                 <a href="index.html" id="about">About</a>
                 <a href="portfolio.html" id="portfolio">Portfolio</a>
                 <a href="#" id="contact">Contact</a>
             </div>
         </nav>
+
         <div class="container">
             <div class="row my-row">
                 <div class="col-1-sm"></div>
-                <div class="col-10-sm col-12-xs">
+                <div class="col-10-sm col-12-xs main-content">
                     <h1 id="contact-header">Contact</h1>
                     <h2 class="adjustments" id="name-header">Name</h2>
                     <input type="text" name="name"  onfocus="this.value=''" value="John Smith" class="adjustments" id="name">
@@ -42,12 +43,10 @@
             <div class="col-4">
             </div>
             <div class="col-4">
-                <!-- Add text-align: center; -->
-                <p>Copyright&copy;<p>
+                <p id="copyright-text">Copyright&copy;<p>
             </div>
             <div class="col-4">
             </div>
         </footer>
     </body>
-
 </html>
