--- a/portfolio.html
+++ b/portfolio.html
@@ -13,18 +13,19 @@
         <link rel="stylesheet" href="css/style-portfolio.css">
     </head>
     <body>
-        <nav class="navbar">
-            <h1>Zach Yingling</h1>
+        <nav class="navbar border-bottom border-1">
+            <h1 class="name-header">Zach Yingling</h1>
             <div class="header-anchors justify-content-end">
                 <a href="index.html" id="about">About</a>
                 <a href="#" id="portfolio">Portfolio</a>
                 <a href="contact.html" id="contact">Contact</a>
             </div>
         </nav>
+
         <div class="container">
             <div class="row my-row">
                 <div class="col-1-sm"></div>
-                <div class="col-10-sm col-12-xs">
+                <div class="col-10-sm col-12-xs main-content">
                     <h1 id="portfolio-header">Portfolio</h1>
                     <div class="weightlifting">
                         <img src="http://lorempixel.com/output/sports-q-c-400-300-1.jpg" alt="sample photo">
@@ -54,12 +55,10 @@
             <div class="col-4">
             </div>
             <div class="col-4">
-                <!-- Add text-align: center; -->
-                <p>Copyright&copy;<p>
+                <p id="copyright-text">Copyright&copy;<p>
             </div>
             <div class="col-4">
             </div>
         </footer>
     </body>
-
 </html>
