--- a/portfolio.html
+++ b/portfolio.html
@@ -27,28 +27,40 @@
                 <div class="col-1-sm"></div>
                 <div class="col-10-sm col-12-xs main-content">
                     <h1 id="portfolio-header">Portfolio</h1>
-                    <div class="weightlifting">
-                        <img src="http://lorempixel.com/output/sports-q-c-400-300-1.jpg" alt="sample photo">
-                        <h2>Weightlifting</h2>
-                    </div>
-                    <div class="video-games">
-                        <img src="http://lorempixel.com/output/business-q-c-400-300-9.jpg" alt="sample photo">
-                        <h2>Video Games</h2>
-                    </div>
-                    <div class="computer">
-                        <img src="http://lorempixel.com/output/technics-q-c-400-300-4.jpg" alt="sample photo">
-                        <h2>Computers</h2>
-                    </div>
-                    <div class="family">
-                        <img src="http://lorempixel.com/output/people-q-c-400-300-8.jpg" alt="sample photo">
-                        <h2>Family</h2>
-                    </div>
-                    <div class="friends">
-                        <img src="http://lorempixel.com/output/people-q-c-400-300-4.jpg" alt="sample photo">
-                        <h2>Friends</h2>
+                    <div class="row">
+                        <div class="col-6">
+                            <div class="weightlifting">
+                                <img src="http://lorempixel.com/output/sports-q-c-400-300-1.jpg" alt="sample photo">
+                                <h2>Weightlifting</h2>
+                            </div>
+                        </div>
+                        <div class="col-6">
+                            <div class="video-games">
+                                <img src="http://lorempixel.com/output/business-q-c-400-300-9.jpg" alt="sample photo">
+                                <h2>Video Games</h2>
+                            </div>
+                        </div>
+                        <div class="col-6">
+                            <div class="computer">
+                                <img src="http://lorempixel.com/output/technics-q-c-400-300-4.jpg" alt="sample photo">
+                                <h2>Computers</h2>
+                            </div>
+                        </div>
+                        <div class="col-6">
+                            <div class="family">
+                                <img src="http://lorempixel.com/output/people-q-c-400-300-8.jpg" alt="sample photo">
+                                <h2>Family</h2>
+                            </div>
+                        </div>
+                        <div class="col-6">
+                            <div class="friends">
+                                <img src="http://lorempixel.com/output/people-q-c-400-300-4.jpg" alt="sample photo">
+                                <h2>Friends</h2>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <div class="col-1-sm "></div>
+                <div class="col-1-sm"></div>
             </div>
         </div>
         <footer class="row jumbotron">
